--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,8 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
+mybatis.mapper-locations=classpath:com/mdd/proxyip/mapper/*.xml
+
 
 
 # REDIS (RedisProperties)
